tweak styling to prevent scrollbars
When the browser is larger than 1025px, the #page content is set to
1000px...but it also has 30px of padding on the left and right. This
causes the width to be 1060px, causing scrollbars to appear. This
tweak to the CSS makes the scroll bars not show up.

--- a/css/main.css
+++ b/css/main.css
@@ -405,11 +405,15 @@ a {
         width: 1000px;
     }
 
-    #page {
+    #banner {
         width: 1000px;
     }
+}
 
-    #banner {
+
+@media (min-width:1065px) {
+
+    #page {
         width: 1000px;
     }
 }
